--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "yc_directory",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "npm@10.5.2",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,49 +11,48 @@
     "prebuild": "npm run typegen",
     "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
+  "packageManager": "npm@10.5.2",
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom",
+    "next": "$next"
+  },
   "dependencies": {
-    "next": "^15.5.7",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
-
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.60.0",
-    "sanity": "^3.60.0",
-    "next-sanity": "^9.5.1",
-    "sanity-plugin-markdown": "^5.0.0",
-
-    "next-auth": "^5.0.0-beta.22",
     "@sentry/nextjs": "^8.34.0",
-
     "@tailwindcss/typography": "^0.5.15",
-    "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7",
-
     "@uiw/react-md-editor": "^4.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.452.0",
     "markdown-it": "^14.1.0",
+    "next": "15.0.0-canary.183",
+    "next-auth": "^5.0.0-beta.22",
+    "next-sanity": "^9.5.1-canary.23",
+    "react": "19.0.0-rc-2d16326d-20240930",
+    "react-dom": "19.0.0-rc-2d16326d-20240930",
+    "sanity": "^3.60.0",
+    "sanity-plugin-markdown": "^5.0.0",
+    "server-only": "^0.0.1",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.13",
-    "lucide-react": "^0.452.0",
-    "clsx": "^2.1.1",
-    "class-variance-authority": "^0.7.0",
-    "server-only": "^0.0.1"
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "@types/markdown-it": "^14.1.2",
-
-    "typescript": "^5.4.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.5.7",
-
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.7"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.0-canary.183",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
