--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.452.0",
     "markdown-it": "^14.1.0",
-    "next": "15.6.0-canary.60",
+    "next": "^15.1.0",
     "next-auth": "^5.0.0-beta.30",
-    "next-sanity": "^9.5.1-canary.23",
-    "react": "19.0.0-rc-2d16326d-20240930",
-    "react-dom": "19.0.0-rc-2d16326d-20240930",
+    "next-sanity": "^9.5.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sanity": "^3.60.0",
     "sanity-plugin-markdown": "^5.0.0",
     "server-only": "^0.0.1",
