--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "yc_directory",
   "version": "0.1.0",
   "private": true,
-   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "predev": "npm run typegen",
