--- a/package.json
+++ b/package.json
@@ -11,11 +11,6 @@
     "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
   "packageManager": "npm@10.5.2",
-  "overrides": {
-    "react": "$react",
-    "react-dom": "$react-dom",
-    "next": "$next"
-  },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -30,12 +25,13 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.452.0",
     "markdown-it": "^14.1.0",
-    "next": "^15.1.0",
-    "next-auth": "^5.0.0-beta.30",
     "next-sanity": "^9.5.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "sanity": "^3.60.0",
+    "next": "15.0.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "next-auth": "5.0.0-beta.25",
+    "eslint-config-next": "15.0.3",
     "sanity-plugin-markdown": "^5.0.0",
     "server-only": "^0.0.1",
     "slugify": "^1.6.6",
